[package]
name = "wasinary"
version = "0.1.0"
authors = ["Ayomide Onigbinde <onigbindeayomide@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="wasinary"
path="src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name="wasinary-bin"
path="src/bin.rs"

[dependencies]
image = "0.23.11"
humantime = "2"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
console_error_panic_hook="0.1.6"
imageproc="0.22.0"
rusttype="0.9.2"
# reqwest="0.10.10"
# oxipng = "4.0.0"

[dependencies.web-sys]
version = "0.3.36"
features = ['Window', 'Performance', 'PerformanceTiming', 'console']

[dependencies.wasm-bindgen]
version="0.2.59"
features=['serde-serialize']

[dependencies.oxipng]
version="4.0.0"
default-features=false

[dependencies.reqwest]
version="0.10.10"
features=["blocking", "json"]